--- a/css-sass/view/widget/_test-subsection.scss
+++ b/css-sass/view/widget/_test-subsection.scss
@@ -50,7 +50,7 @@
 
 
         /* Phone */
-        @media only screen and (max-width:$mq-phone), print {
+        @media only screen and (max-width:$mq-phone) {
             font-size: 146.5%;
 
             .widget-arrow {
@@ -58,6 +58,10 @@
                 top: -3px;
                 left: auto;
             }
+        }
+
+        @media print {
+            font-size: 131%;
         }
     }
 
