--- a/js/template/subtest/TypesOfCell2.html
+++ b/js/template/subtest/TypesOfCell2.html
@@ -2,7 +2,7 @@
 
     <div class="yui3-g-r">
         <div class="yui3-u-1-3 yui3-u-1-2-small-tablet">
-            <div class="yui3-u-c fighter">
+            <div class="yui3-u-c type fighter">
                 <div class="title">Infection Fighters</div>
 
                 <div class="diagram big">
@@ -36,7 +36,7 @@
         </div>
 
         <div class="yui3-u-1-3 yui3-u-1-2-small-tablet">
-            <div class="yui3-u-c defender">
+            <div class="yui3-u-c type defender">
                 <div class="title">Immune Defenders</div>
 
                 <div class="diagram medium">
@@ -70,7 +70,7 @@
         </div>
 
         <div class="yui3-u-1-3 yui3-u-1-2-small-tablet">
-            <div class="yui3-u-c watcher">
+            <div class="yui3-u-c type watcher">
                 <div class="title">Allergen Watchmen</div>
 
                 <div class="diagram small">
