--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -23,7 +23,7 @@
 	        <div class="test-section-inner-with-icon desktop-only last">
 				<div class="yui3-g-r">
 					<div class="yui3-u-1-2 yui3-u-13-24-small-tablet">
-						<div class="yui3-u-c">
+						<div class="yui3-u-c yui3-u-c-horizontal-bottom-print">
 							<div class="chart">
 								<div class="diagram"><div class="inner"></div></div>
 								<div class="value">
@@ -38,7 +38,7 @@
 					</div>
 
 					<div class="yui3-u-1-2 yui3-u-11-24-small-tablet">
-						<div class="yui3-u-c">
+						<div class="yui3-u-c yui3-u-c-horizontal-bottom-print">
 							<div class="range-container"></div>
 						</div>
 					</div>
@@ -70,7 +70,7 @@
 	        <div class="test-section-inner-with-icon desktop-only last">
 				<div class="yui3-g-r">
 					<div class="yui3-u-1-2 yui3-u-13-24-small-tablet">
-						<div class="yui3-u-c">
+						<div class="yui3-u-c yui3-u-c-horizontal-bottom-print">
 							<div class="chart">
 								<div class="diagram"><div class="inner"></div></div>
 								<div class="value">
@@ -85,7 +85,7 @@
 					</div>
 
 					<div class="yui3-u-1-2 yui3-u-11-24-small-tablet">
-						<div class="yui3-u-c">
+						<div class="yui3-u-c yui3-u-c-horizontal-bottom-print">
 							<div class="range-container"></div>
 						</div>
 					</div>
@@ -117,7 +117,7 @@
 	        <div class="test-section-inner-with-icon desktop-only last">
 				<div class="yui3-g-r">
 					<div class="yui3-u-1-2 yui3-u-13-24-small-tablet">
-						<div class="yui3-u-c">
+						<div class="yui3-u-c yui3-u-c-horizontal-bottom-print">
 							<div class="chart">
 								<div class="diagram"><div class="inner"></div></div>
 								<div class="value">
@@ -132,7 +132,7 @@
 					</div>
 
 					<div class="yui3-u-1-2 yui3-u-11-24-small-tablet">
-						<div class="yui3-u-c">
+						<div class="yui3-u-c yui3-u-c-horizontal-bottom-print">
 							<div class="range-container"></div>
 						</div>
 					</div>
