--- a/css-sass/view/subtest/_range.scss
+++ b/css-sass/view/subtest/_range.scss
@@ -28,7 +28,7 @@
             letter-spacing: -3px;
 
             @media print {
-                font-size: 250%;
+                font-size: 180%;
             }
         }
 
@@ -36,6 +36,10 @@
             font-size: 123.1%;
             font-weight: bold;
             display: block;
+
+            @media print {
+                font-size: 100%;
+            }
         }
 
         .widget-indicator {
@@ -49,7 +53,7 @@
         padding-top: 87px;
 
         @media print {
-            padding-top: 63px;
+            padding-top: 53px;
         }
 
         .range {
@@ -158,7 +162,7 @@
             padding-top: 68px;
 
             @media print {
-                padding-top: 44px;
+                padding-top: 37px;
             }
         }
     }
