--- a/css-sass/view/test/_cbc.scss
+++ b/css-sass/view/test/_cbc.scss
@@ -50,9 +50,9 @@
 
                     // IE8 - must be on one line, unfortunately
                     // @see http://www.useragentman.com/IETransformsTranslator/
-                    -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=" + $scale + ", M12=0, M21=0, M22=" + $scale + ", SizingMethod='auto expand')"\9;
-                    margin-left: ($diagramDiameter / $divisor)\9;
-                    margin-top: ($diagramDiameter / $divisor)\9;
+                    filter: unquote("progid:DXImageTransform.Microsoft.Matrix(M11=" + ($scale - 0.15) + ", M12=0, M21=0, M22=" + ($scale - 0.15) + ", SizingMethod='auto expand')");
+                    margin-left: ($diagramDiameter / $divisor / 1.5)\9;
+                    margin-top: ($diagramDiameter / $divisor / 1.5)\9;
                 }
             }
         }
